# dsb-ide

./: CMakeLists.txt  README.md
data/: icons.qrc  splash.qrc
include/dsb/ide/: ide.h  view.h
source/: asmsyntax.cpp  assembler.cpp  assembler.h  connectdiag.cpp  connectdiag.h  errlog.cpp  errlog.h  eventgen.cpp  eventgen.h  eventlog.cpp  eventlog.h  ide.cpp  ide.h  main.cpp  msggen.cpp  msggen.h  msglog.cpp  msglog.h  treeview.cpp  treeview.h  view.cpp
views/Assembler/: asmsyntax.cpp  asmsyntax.h  assembler.cpp  assembler.h  view.cpp
views/DisplayView/: displayview.h  view.cpp
views/ObjectView/: objectview.h  view.cpp
views/ScriptView/: lexer.l  parser.y  script.cpp  script.h  scriptsyntax.cpp  scriptsyntax.h
